<resources>
	<string name="app_name">PIRI MNK</string>
	<string name="settings">Settings</string>
	<string name="restart">Restart</string>
	<string name="draw">Draw</string>
	<string name="changeSide">Yield</string>
	<string name="boardSize">Board size</string>
	<string name="backgroundColor">Background color</string>
	<string name="lineColor">Line color</string>
	<string name="oColor">Second player\'s color</string>
	<string name="xColor">First player\'s color</string>
	<string name="winCondition">Winning length</string>
	<string name="fill_all">Fill all</string>
	<string name="ai">AI</string>
	<string name="revert">Revert</string>
	<string name="rules">Rules</string>
	<string name="graphics">Graphics</string>
	<string name="save">Save</string>
	<string name="load">Load</string>
	<string name="saveRationale">The permission is needed to save games on files.</string>
	<string name="loadRationale">The permission is needed to load games from files.</string>
	<string name="fileNameHint">Enter the filename</string>
	<string name="xStones">Xs</string>
	<string name="oStones">Os</string>
	<string name="goStones">Go stones</string>
	<string name="rectangles">Rectangles</string>
	<string name="diamonds">Diamonds</string>
	<string name="winAnnouncement">th player won</string>
	<string name="ioError">An IO error occurred.</string>
	<string name="asTheServer">Play first</string>
	<string name="asAClient">Play second</string>
	<string name="local">Local</string>
	<string name="bluetooth">Bluetooth</string>
	<string name="lan">LAN</string>
	<string name="connect">Connect</string>
	<string name="multiplayerOnBluetooth">Multiplayer over Bluetooth</string>
	<string name="clientIdentifierHint">Enter the same thing as our opponent</string>
	<string name="serverIdentifierHint">Enter the same thing as our opponent</string>
	<string name="locationRationale">The permission is needed to search for Bluetooth devices.</string>
	<string name="requestRejected">Your request was rejected.</string>
	<string name="requested">The opponent requested %s.</string>
	<string name="firstSymbols">First player\'s symbols</string>
	<string name="secondSymbols">Second player\'s symbols</string>
	<string name="horSize">Horizontal size</string>
	<string name="verSize">Vertical size</string>
	<string name="sgfLimit">Saving games with a side longer than 52 is currently not supported.</string>
	<string name="noBluetoothSupport">This device doesn\'t support Bluetooth.</string>
	<string name="enableBluetooth">Enable Bluetooth to play wirelessly.</string>
	<string name="highlightColor">Highlight color</string>
	<string name="highlightSettings">Highlight settings</string>
	<string name="highlightDuration">Duration</string>
	<string name="highlightHowMany">Number</string>
	<string name="enableHighlighting">Enable highlighting</string>
	<string name="timeLimit">Time limit(milliseconds)</string>
	<string name="enableTimeLimit">Enable time limit</string>
	<string name="linesEnclosingSymbols">Lines enclosing symbols</string>
	<string name="linesUnderSymbols">Lines under symbols</string>
	<string name="cancel">Cancel</string>
	<string name="diagonalsEnclosingSymbols">Diagonals enclosing symbols</string>
	<string name="lineType">Line type</string>
	<string name="connectionTerminated">The opponent terminated the connection.</string>
	<string name="waitDelay">Wait a moment&#8230;</string>
	<string name="credits">Credits</string>
	<string name="couldntFindFile">Couldn\'t find the file.</string>
	<string name="couldntCreateFile">Couldn\'t create/overwrite the file.</string>
	<string name="moveWasInvalid">The opponent\'s move was invalid. His app may be outdated.</string>
	<string name="couldntGetStream">Couldn\'t get streams from the socket.</string>
	<string name="problemWhileClosing">A problem occurred while closing the socket.</string>
	<string name="failedToReceive">Failed to receive data from the opponent.</string>
	<string name="failedToSend">Failed to send data to the opponent.</string>
	<string name="termConnection">Terminate connection?</string>
	<string name="none_ruleSync">none</string>
	<string name="none_preset">None</string>
	<string name="myIndex">We play</string>
	<string name="ordinalMarker">th</string>
	<string name="tictactoe">Tic Tac Toe</string>
	<string name="go">Go</string>
	<string name="filler">Filler(stupidly easy)</string>
	<string name="piriValue01">PIRI Value 0.1(easy)</string>
	<string name="piriValue">PIRI Value(medium)</string>
	<string name="aiType">AI type</string>
	<string name="emacsGomoku">Emacs-style(hard)</string>
	<string name="showAiInternals">Show AI internals</string>
	<string name="emacsLengthWarning">Emacs-style cannot be used with a winning length longer than 8.</string>
	<string name="gomoku1515">15x15 Gomoku</string>
	<string name="gomoku1919">19x19 Gomoku</string>
	<string name="restartRequest">Request a restart</string>
	<string name="sendChangedRules">Send changed rules</string>
	<string name="playFirst">Play first</string>
	<string name="preset">Preset</string>
	<string name="enableGravity">Enable gravity</string>
	<string name="gravitySummary">Warning: the AIs weren\'t built for this</string>
	<string name="gravity">Gravity</string>
	<string name="disabled">no</string>
	<string name="enabled">yes</string>
	<string name="fourInRow">Four in a Row</string>
	<string name="exactOnly">Exact lines only</string>
	<string name="onlyCountExact">Only count lines of exact length as win</string>
	<string name="exactSummary">Discounts 6-lines in gomoku and such.</string>
	<string name="helpers">Helpers</string>
	<string name="showOrder">Show order of moves</string>
</resources>
