<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:custom="http://schemas.android.com/apk/res-auto">
	<PreferenceCategory
		android:title="@string/rules">
		<com.thisispiri.preferences.TwoNumberPreference
			custom:firstKey="horSize"
			custom:firstText="@string/horSize"
			custom:firstDefault="@integer/defaultHorSize"
			custom:secondKey="verSize"
			custom:secondText="@string/verSize"
			custom:secondDefault="@integer/defaultVerSize"
			custom:imposeScreenLimit="true"
			android:title="@string/boardSize" />
		<com.thisispiri.preferences.IntegerPreference
			android:key="winStreak"
			android:title="@string/winCondition"
			android:inputType="numberSigned"
			android:digits="0123456789"
			android:defaultValue="@integer/defaultWinStreak"
			custom:imposeScreenLimit="true" />
		<CheckBoxPreference
			android:key="enableTimeLimit"
			android:title="@string/enableTimeLimit"
			android:defaultValue="false" />
		<com.thisispiri.preferences.IntegerPreference
			android:key="timeLimit"
			android:title="@string/timeLimit"
			android:inputType="numberSigned"
			android:digits="0123456789"
			android:defaultValue="@integer/defaultTimeLimit"
			custom:imposeScreenLimit="false"/>
	</PreferenceCategory>
	<PreferenceCategory
		android:title="@string/graphics">
		<ListPreference
			android:key="symbols"
			android:title="@string/symbols"
			android:entries="@array/symbolsIds"
			android:entryValues="@array/symbolsValues"
			android:defaultValue="@string/symbolDefault"/>
		<CheckBoxPreference
			android:key="enableHighlight"
			android:title="@string/enableHighlighting"
			android:defaultValue="true"/>
		<com.thisispiri.preferences.TwoNumberPreference
			custom:firstKey="highlightDuration"
			custom:firstText="@string/highlightDuration"
			custom:firstDefault="@integer/defaultHighlightDuration"
			custom:secondKey="highlightHowMany"
			custom:secondText="@string/highlightHowMany"
			custom:secondDefault="@integer/defaultHighlightHowMany"
			custom:imposeScreenLimit="false"
			android:title="@string/highlightSettings"/>
		<ListPreference
			android:key="lineType"
			android:title="@string/lineType"
			android:entries="@array/linesIds"
			android:entryValues="@array/linesValues"
			android:defaultValue="@string/lineDefault"/>
		<com.thisispiri.preferences.ArgbPreference
			android:key="highlightColor"
			android:title="@string/highlightColor"
			android:defaultValue="@integer/defaultHighlight"/>
		<com.thisispiri.preferences.ArgbPreference
			android:key="backgroundColor"
			android:title="@string/backgroundColor"
			android:defaultValue="@integer/defaultBackground"/>
		<com.thisispiri.preferences.ArgbPreference
			android:key="lineColor"
			android:title="@string/lineColor"
			android:defaultValue="@integer/defaultLine"/>
		<com.thisispiri.preferences.ArgbPreference
			android:key="xColor"
			android:title="@string/xColor"
			android:defaultValue="@integer/defaultX"/>
		<com.thisispiri.preferences.ArgbPreference
			android:key="oColor"
			android:title="@string/oColor"
			android:defaultValue="@integer/defaultO"/>
	</PreferenceCategory>
	<PreferenceCategory
		android:title="Others">
		<com.thisispiri.preferences.CreditsPreference
			android:title="@string/credits"
			custom:text="The AOSP, for Android and the Support Library in Apache License 2.0\nYou can obtain a copy of Apache License 2.0 at https://www.apache.org/licenses/LICENSE-2.0"/>
	</PreferenceCategory>
</PreferenceScreen>