<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/mainLayout"
	android:layout_width="match_parent"
	android:layout_height="match_parent">
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		tools:context="com.thisispiri.mnk.MainActivity"
		android:orientation="vertical"
		android:gravity="center_horizontal"
		tools:ignore="ButtonStyle">
		<Button
			android:id="@+id/buttonSettings"
			android:text="@string/settings"
			android:layout_width="match_parent"
			android:layout_height="42dp" />
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">
			<androidx.appcompat.widget.SwitchCompat
				android:id="@+id/useAI"
				android:textAppearance="@style/TextShadow"
				android:textSize="15sp"
				android:layout_marginStart="20dp"
				android:layout_marginLeft="20dp"
				android:checked="true"
				android:text="@string/ai"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" />
			<RadioGroup
				android:id="@+id/radioPlayers"
				android:layout_marginStart="20dp"
				android:layout_marginLeft="20dp"
				android:orientation="horizontal"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content">
				<RadioButton
					android:id="@+id/radioLocal"
					android:textAppearance="@style/TextShadow"
					android:textSize="15sp"
					android:checked="true"
					android:text="@string/local"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content" />
				<RadioButton
					android:id="@+id/radioBluetooth"
					android:textAppearance="@style/TextShadow"
					android:textSize="15sp"
					android:text="@string/bluetooth"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content" />
			</RadioGroup>
		</LinearLayout>
		<FrameLayout
			android:layout_height="wrap_content"
			android:layout_width="match_parent">
			<com.thisispiri.mnk.DebugBoard
				android:id="@+id/illustrator"
				android:layout_width="400dp"
				android:layout_height="400dp" />
			<com.thisispiri.mnk.Highlighter
				android:id="@+id/highlighter"
				android:layout_marginTop="-400dp"
				android:layout_width="400dp"
				android:layout_height="400dp"/>
		</FrameLayout>
		<TextView
			android:id="@+id/winText"
			android:textAppearance="@style/TextShadow"
			android:textSize="26sp"
			android:gravity="center"
			android:layout_width="match_parent"
			android:layout_height="34dp" />
		<LinearLayout
			android:orientation="horizontal"
			android:gravity="center"
			android:layout_height="wrap_content"
			android:layout_width="match_parent" >
			<Button
				android:id="@+id/buttonAI"
				android:text="@string/change_side"
				android:textSize="@dimen/lowerButtonTextSize"
				android:layout_weight="1"
				android:layout_width="0dp"
				android:layout_height="wrap_content" />
			<Button
				android:id="@+id/restart"
				android:text="@string/restart"
				android:textSize="@dimen/lowerButtonTextSize"
				android:layout_weight="1"
				android:layout_width="0dp"
				android:layout_height="wrap_content" />
			<Button
				android:id="@+id/revert"
				android:text="@string/revert"
				android:textSize="@dimen/lowerButtonTextSize"
				android:layout_weight="1"
				android:layout_width="0dp"
				android:layout_height="wrap_content" />
		</LinearLayout>
		<LinearLayout
			android:orientation="horizontal"
			android:gravity="center"
			android:layout_width="match_parent"
			android:layout_height="wrap_content">
			<Button
				android:id="@+id/fill"
				android:text="@string/fill_all"
				android:textSize="@dimen/lowerButtonTextSize"
				android:layout_weight="1"
				android:layout_width="0dp"
				android:layout_height="wrap_content" />
			<Button
				android:id="@+id/save"
				android:text="@string/save"
				android:textSize="@dimen/lowerButtonTextSize"
				android:layout_weight="1"
				android:layout_width="0dp"
				android:layout_height="wrap_content" />
			<Button
				android:id="@+id/load"
				android:text="@string/load"
				android:textSize="@dimen/lowerButtonTextSize"
				android:layout_weight="1"
				android:layout_width="0dp"
				android:layout_height="wrap_content" />
		</LinearLayout>
	</LinearLayout>
</ScrollView>